fix!:home page mobile nav overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -54,12 +54,16 @@ html {
 
 
 
-
+body,
+html,
+:root {
+	overflow-x: hidden;
+}
 
 body {
-	overflow-x: hidden;
 	background-color: var(--background-color);
 	color: var(--text-color);
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
